# legion-go-s-ui-reset

./: .gitattributes  LICENSE  README.md
python_version/: install.sh  uninstall.sh
rust_version/: Cargo.toml  install.sh
rust_version/src/: main.rs
